# ai-file-classifier

./: .env.example  .gitignore  AI_File_Classifier_Technical_Specification.md  BATCH_OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh  test_language_cli.py
config/: config.yaml
docs/: BATCH_PROCESSING_OPTIMIZATION.md  BATCH_PROCESSING_QUICKSTART.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  SEQUENTIAL_BATCH_FIX.md  TRUE_BATCH_PROCESSING.md
examples/: indonesian_example.py
src/: app_controller.py  cli.py  main.py
src/core/: ai_classifier.py  directory_manager.py  file_mover.py  file_scanner.py  report_generator.py
src/models/: classification.py  file_info.py
src/strategies/: base_strategy.py  content_based.py
src/utils/: cache_manager.py  config_manager.py  exceptions.py  logger.py  validators.py
